--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,8 @@ footer{
     padding: 10px;
     box-shadow: 0 0 10px gray;
 }
+
+.inputForm{
+    margin-top: 5000px;
+    padding-bottom: 5000px;
+}
