--- a/Skills feladat/css/style.css
+++ b/Skills feladat/css/style.css
@@ -37,3 +37,11 @@ footer{
     background-color: slategray;
     color: white;
 }
+
+.fieldName{
+    width: 200px !important;
+}
+
+section{
+    padding: 10px;
+}
